fix waves on mobile

--- a/feedback/style.css
+++ b/feedback/style.css
@@ -310,6 +310,15 @@ input:focus ~ label.nachnameLabel {
         height: 100%;
     }
 
+    html, body {
+        margin: 0;
+        height: 100%;
+    }
+
+    body {
+        background-image: url(/layered-waves-haikei\ \(2\).svg);
+    }
+
     .show {
         animation: showMenu .4s ease forwards;
         display: none;
