--- a/skills/style.css
+++ b/skills/style.css
@@ -265,6 +265,15 @@ a {
         overflow-x: hidden;
     }
 
+    html, body {
+        margin: 0;
+        height: 100%;
+    }
+
+    body {
+        background-image: url(/layered-waves-haikei\ \(2\).svg);
+    }
+
     nav {
         display: flex;
         flex-direction: column;
